Bug 1764861 - Release SpeexResamplerState if needed r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D143804